--- a/test/samples/src/css/sprite.css
+++ b/test/samples/src/css/sprite.css
@@ -1,2 +1,3 @@
 .custom-icon-hot { width: 21px; height: 9px; background-image: url(../images/sprite.png); background-position: 0px 0px; }
-.custom-icon-new { width: 21px; height: 9px; background-image: url(../images/sprite.png); background-position: 0px -9px; }
+.custom-icon-new { width: 21px; height: 9px; background-image: url(../images/sprite.png); background-position: 0px -9px; }  height: 9px;
+}
